@@ -20,7 +20,6 @@ use warnings;
 
 use ANSTE;
 use ANSTE::Config;
-use ANSTE::Status;
 use ANSTE::Scenario::Scenario;
 use ANSTE::Deploy::ScenarioDeployer;
 use ANSTE::Test::Suite;
@@ -68,7 +67,6 @@ sub new
     my $self = {};
 
     my $config = ANSTE::Config->instance();
-    $self->{status} = ANSTE::Status->instance();
 
     $self->{suite} = undef;
     $self->{report} = new ANSTE::Report::Report();
@@ -458,7 +456,7 @@ sub _runTest
     $testResult->setStartTime($self->_time());
 
     # Create a temp directory for this test
-    my $id = $self->{status}->identifier();
+    my $id = $config->identifier();
     my $newPath = "/var/tmp/anste-tests/$id/$name";
     system ("rm -rf $newPath");
     system ("mkdir -p $newPath");
