@@ -1,4 +1,5 @@
 HEAD
+    + Added global/identifier config key
     + Make anste-clean command work with any virtualizer
     + Added listVMs method to the virtualizers
     + Added identifier and conf command line arguments
